--- a/index.html
+++ b/index.html
@@ -6,40 +6,40 @@
     <title>Document</title>
     <style>
         body{
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: TAHOMA, Helvetica, sans-serif;
         }
         .culc{
-            width: 240px; margin: 40px auto; background-color: lightgray;
+            width: 240px; margin: 40px auto; background-color: rgb(158, 249, 255);
             padding:15px;
             border-style:solid;
-            border-color: gray;
+            border-color: black;
         }
       .buttonNum {
         float: left;
         width: 50px;
         margin: 5px;
-        background-color: gray;
+        background-color: rgb(158, 249, 255);
         text-align: center;
         padding:5px 0;
         border-radius: 4px;
         cursor:pointer;
       }
       .buttonNum:hover{
-          background-color: lightslategray;
+          background-color: gray;
           color: white;
       }
       .button{
         float: left;
         width: 50px;
         margin: 5px;
-        background-color: rgb(122, 151, 180);
+        background-color: rgb(158, 249, 255);
         text-align: center;
         padding:5px 0;
         border-radius: 4px;
         cursor:pointer;
       }
       .button:hover{
-          background-color: lightslategray;
+          background-color: gray;
           color: white;
       }
       .monitor{
@@ -69,9 +69,9 @@
     </div>
     <div class="culc">
         <div class="monitor">0</div>
-        <div class="button">AC</div>
-        <div class="button">%</div>
         <div class="button">.</div>
+        <div class="button">%</div>
+        <div class="button">/</div>
         <div class="button">+</div>
         <div class="buttonNum">1</div>
         <div class="buttonNum">2</div>
@@ -84,7 +84,7 @@
         <div class="buttonNum">7</div>
         <div class="buttonNum">8</div>
         <div class="buttonNum">9</div>
-        <div class="button">/</div>
+        <div class="button">AC</div>
         <div class="buttonNum">0</div>
         <div style="clear: both;"></div>
         <div class="result">=</div>
